--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Mukesh Rana</h1>
+    <img src="./mukesh.png" height="200px">
         <p>Sr. Executive <b>(Digital Marketing)</b></p>
       <h2>Objection</h2>
         <p></p>
