--- a/index.html
+++ b/index.html
@@ -9,13 +9,50 @@
     <h1>Mukesh Rana</h1>
     <img src="/mukesh.png" height="200px">
         <p>Sr. Executive <b>(Digital Marketing)</b></p>
-      <h2>Objection</h2>
-        <p></p>
-      <h2>Education</h2>
-      <p></p>
+    <h2>Summary</h2>
+        <p>I am a hardworking and dedicated individual with experience in customer service and administration.</p>
+    <hr/>
+           <h2>Education</h2>
+              <ul>
+                  <li>Bachelor of Arts, Business Administration - University of XYZ (2010-2014)</li>
+              </ul>
+    <hr/>
       <h2>Work Experience</h2>
-      <p></p>
-      <h2>Skill</h2>
-      <p></p>
+            <ul>
+                <li><strong>Customer Service Representative-ABC Inc.</strong>
+                <p>June2014 - May2018</p>
+                    <li>Answered customer inquiries via phone and email</li>
+                    <li>Resolved customer complaints and issues</li>
+                     <li>Maintained customer records and updated account information</li>
+
+                </li>
+                <li><strong>Administrative Assistant - XYZ Corp.</strong>
+                    <p>June2018 - Present</p>
+                    <li>Assisted with scheduling appointments and meetings</li>
+                        <li>Managed incoming and outgoing mail and correspondence</li>
+                        <li>Prepared reports and presentations using Microsoft Office Suite</li>
+                    </li>
+            </ul>
+            <hr/>
+    <h2>Skill</h2>
+      <ul>
+            <li>Customer service: ⭐️⭐️⭐️⭐️⭐️</li>
+            <li>Microsoft Office Suite: ⭐️⭐️⭐️</li>
+            <li>Organizational skills: ⭐️⭐️⭐️⭐️</li>
+      </ul>
+    <hr/>
+    <h2>Award and Certification</h2>
+    <ul>
+        <li>
+            Employee of the Month - ABC Inc. (August 2016)
+        </li>
+    </ul>
+    <hr/>
+    <h2>Other</h2>
+    <ul>
+      <li>My Hobbies</li>
+        <li>Contact Me</li>
+    </ul>
+    ©️Jane Doe. All Rights Reserved
 </body>
 </html>
