--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <hr/>
     <h2>Other</h2>
     <ul>
-      <li>My Hobbies</li>
-        <li>Contact Me</li>
+      <li><a href="/my-hobbies.html">My Hobbies</a></li>
+        <li><a href="/contact-details.html">Contact Me</a></li>
     </ul>
     ©️Jane Doe. All Rights Reserved
 </body>
