--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
       <li><a href="/my-hobbies.html">My Hobbies</a></li>
         <li><a href="/contact-details.html">Contact Me</a></li>
     </ul>
-    ©️Jane Doe. All Rights Reserved
+    <footer>©️Jane Doe. All Rights Reserved</footer>
 </body>
 </html>
