--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Mukesh Rana</h1>
-    <img src="/mukesh.png" height="200px">
+    <img src="/mukesh.png" alt="Mukesh Rana Image">
         <p>Sr. Executive <b>(Digital Marketing)</b></p>
     <h2>Summary</h2>
         <p>I am a hardworking and dedicated individual with experience in customer service and administration.</p>
